fixed css spacing for SongMatch

--- a/src/SongMatch/index.css
+++ b/src/SongMatch/index.css
@@ -84,8 +84,8 @@ body {
 
 .embed-playlist {
     margin-top: 50px;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
 }
 
 .create-playlist-button:hover {
@@ -165,6 +165,7 @@ flex: 1; /* Allows the Spotify component to take up remaining space */
     color: white;
     font-weight: bold;
     bottom: 30vh;
+    margin-top: -50px;
 }
 
 .selected-text-recs {
